--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.0.7",
     "prettier": "2.5.1",
     "react": "17.0.2",
+    "react-cool-inview": "^2.0.8",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
