--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/material": "^5.2.7",
     "framer-motion": "^5.5.6",
+    "locomotive-scroll": "^4.1.4",
     "next": "12.0.7",
     "prettier": "2.5.1",
     "react": "17.0.2",
     "react-cool-inview": "^2.0.8",
     "react-dom": "17.0.2",
+    "react-locomotive-scroll": "^0.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
