--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/material": "^5.2.7",
+    "axios": "^0.25.0",
     "framer-motion": "^5.5.6",
     "locomotive-scroll": "^4.1.4",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "prettier": "2.5.1",
     "react": "17.0.2",
